# nyx-os

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.claude/: CLAUDE.md
.claude/agents/: cpp-rust-engineer.md  llm-integration-expert.md  react-fluent-dev.md  spring-ai-engineer.md
.github/workflows/: ci.yml
aether/: Cargo.toml
aether/src/: compositor.rs  config.rs  input.rs  ipc.rs  main.rs  output.rs  render.rs  security.rs  shell.rs  window.rs
agents/arachne/: Cargo.toml
agents/arachne/src/: config.rs  dns.rs  firewall.rs  interfaces.rs  ipc.rs  main.rs  monitor.rs  routing.rs  vpn.rs
agents/archon/: Cargo.toml
agents/archon/src/: cgroup.rs  config.rs  ipc.rs  main.rs  orchestrator.rs  process.rs  resource.rs  stats.rs
agents/grimoire/: Cargo.toml
agents/grimoire/src/: config.rs  ipc.rs  main.rs  migration.rs  persona_ipc.rs  persona_store.rs  ritual_store.rs  schema.rs  store.rs  watcher.rs
agents/guardian/: Cargo.toml
agents/guardian/src/: audit.rs  config.rs  decision.rs  intent.rs  ipc.rs  main.rs  pattern.rs  policy.rs  sandbox.rs
chronos/: Cargo.toml
chronos/src/: clock.rs  config.rs  ctl.rs  ipc.rs  main.rs  ntp.rs  timezone.rs
cipher/: Cargo.toml
cipher/benches/: crypto_bench.rs
cipher/src/: cli.rs  crypto.rs  ipc.rs  keyring.rs  lib.rs  main.rs  session.rs  state.rs  storage.rs
examples/services/: arachne.yaml  archon.yaml  herald.yaml
herald/: Cargo.toml
herald/src/: config.rs  dbus.rs  display.rs  dnd.rs  history.rs  ipc.rs  main.rs  notification.rs
init/: Cargo.toml
init/src/: config.rs  dependency.rs  grimoire.rs  health.rs  ipc.rs  main.rs  service.rs  supervisor.rs
iris/: Cargo.toml
iris/src/: backlight.rs  config.rs  ctl.rs  display.rs  ipc.rs  main.rs
kernel/: .gitignore  Cargo.toml  Makefile  linker.ld  x86_64-nyx.json
kernel/.cargo/: config.toml
kernel/docs/: WSL2_SETUP.md
kernel/scripts/: run.sh
kernel/src/: lib.rs  main.rs  panic.rs  process.rs  sync.rs  syscall.rs  time.rs  traits.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: boot.S  boot.rs  gdt.rs  idt.rs  mod.rs  paging.rs  serial.rs  smp.rs
kernel/src/cap/: cspace.rs  derive.rs  mod.rs  object.rs  rights.rs
kernel/src/driver/: acpi.rs  block.rs  device.rs  devicetree.rs  irq.rs  mmio.rs  mod.rs  pci.rs
kernel/src/fs/: initrd.rs  mod.rs
kernel/src/ipc/: endpoint.rs  message.rs  mod.rs  notification.rs  ring.rs  shm.rs
kernel/src/mem/: frame.rs  heap.rs  mod.rs  user.rs  virt.rs
kernel/src/net/: ethernet.rs  interface.rs  ip.rs  mod.rs  socket.rs  tcp.rs  udp.rs
kernel/src/sched/: cfs.rs  deadline.rs  energy.rs  mod.rs  thread.rs
kernel/src/signal/: action.rs  delivery.rs  info.rs  mod.rs  queue.rs  set.rs
kernel/src/tensor/: buffer.rs  device.rs  inference.rs  migration.rs  mod.rs  queue.rs
kernel/src/timetravel/: checkpoint.rs  mod.rs  record.rs
libs/grimoire-client/: Cargo.toml
libs/grimoire-client/src/: lib.rs
libs/grimoire-core/: Cargo.toml
libs/grimoire-core/src/: error.rs  ipc.rs  lib.rs  memory.rs  persona.rs  ritual.rs
libs/libnyx/: Cargo.toml  README.md  build.rs
libs/libnyx-ipc/: Cargo.toml
libs/libnyx-ipc/src/: guardian.rs  init.rs  lib.rs  protocol.rs
libs/libnyx-platform/: Cargo.toml
libs/libnyx-platform/src/: lib.rs
libs/libnyx/benches/: data_structures.rs
libs/libnyx/examples/: hello.rs  ipc_echo.rs  tensor_inference.rs
libs/libnyx/src/: cap.rs  ipc.rs  lib.rs  memory.rs  process.rs  syscall.rs  tensor.rs  thread.rs  time.rs  timetravel.rs
libs/libnyx/tests/: api_structure.rs  capability_rights.rs  error_codes.rs  syscall_numbers.rs
libs/nyx-theme/: Cargo.toml
libs/nyx-theme/src/: colors.rs  fonts.rs  icons.rs  lib.rs  spacing.rs  theme.rs  widgets.rs
libs/nyx-theme/src/widgets/: button.rs  card.rs  input.rs  panel.rs  toggle.rs
nexus/: Cargo.toml
nexus/src/: cache.rs  daemon.rs  ipc.rs  main.rs  package.rs  repository.rs  resolver.rs  sandbox.rs  store.rs  transaction.rs
nyx-assistant/: Cargo.toml
nyx-assistant/src/: app.rs  commands.rs  main.rs  search.rs
nyx-control/: Cargo.toml
nyx-control/src/: app.rs  controls.rs  main.rs
nyx-serviced/: Cargo.toml
nyx-serviced/src/: cgroups.rs  dependency.rs  ipc.rs  lifecycle.rs  main.rs  socket_activation.rs  state.rs  unit.rs  watchdog.rs
nyx-settings/: Cargo.toml
nyx-settings/src/: app.rs  main.rs  pages.rs
nyx-settings/src/pages/: about.rs  appearance.rs  display.rs  network.rs  notifications.rs  power.rs  sound.rs
nyx-shell/: Cargo.toml
nyx-shell/src/: app.rs  config.rs  dock.rs  main.rs  messages.rs  panel.rs  system.rs  workspace.rs
phantom/: Cargo.toml
phantom/src/: device.rs  devnode.rs  hwdb.rs  ipc.rs  main.rs  netlink.rs  rule.rs
scribe/: Cargo.toml
scribe/src/: collector.rs  ctl.rs  ipc.rs  journal.rs  main.rs  query.rs  state.rs  storage.rs
sentinel/: Cargo.toml
sentinel/src/: alerts.rs  config.rs  ctl.rs  ipc.rs  main.rs  metrics.rs
slumber/: Cargo.toml
slumber/src/: battery.rs  config.rs  ctl.rs  ipc.rs  main.rs  profiles.rs  sleep.rs
spectre/: Cargo.toml
spectre/src/: auth.rs  greeter.rs  ipc.rs  main.rs  pam_auth.rs  seat.rs  session.rs  user.rs
summoner/: Cargo.toml
summoner/src/: actions.rs  config.rs  desktop.rs  index.rs  ipc.rs  main.rs  recent.rs  search.rs
umbra/: Cargo.toml
umbra/src/: command.rs  completion.rs  config.rs  history.rs  main.rs  prompt.rs  shell.rs  ui.rs
vault/: Cargo.toml
vault/src/: config.rs  crypto.rs  ctl.rs  ipc.rs  main.rs  store.rs
vesper/: Cargo.toml
vesper/src/: bluetooth.rs  client.rs  config.rs  device.rs  ipc.rs  main.rs  mixer.rs  sink.rs  source.rs  stream.rs
wraith/: Cargo.toml
wraith/src/: config.rs  ctl.rs  dhcp.rs  dns.rs  interface.rs  ipc.rs  main.rs  profile.rs  state.rs  wifi.rs
