[workspace]
resolver = "2"
members = [
    "kernel",
    "libs/libnyx",
    "libs/libnyx-ipc",
    "libs/libnyx-platform",
    "init",
    "agents/guardian",
    "agents/archon",
    "agents/arachne",
    "agents/grimoire",
    "aether",
    "umbra",
    "summoner",
    "herald",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Daemoniorum Engineering <engineering@daemoniorum.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/daemoniorum/nyx"

[workspace.dependencies]
# Core
bitflags = "2.9"
spin = "0.10"
log = "0.4"

# Data structures
hashbrown = "0.15"
heapless = "0.8"

# Architecture support
x86_64 = "0.15"
aarch64-cpu = "9.4"

# Verification
contracts = "0.6"

# Async runtime (userspace)
tokio = { version = "1.41", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
glob = "0.3"
which = "7.0"
hostname = "0.4"
rand = "0.8"
notify = "7.0"
crossterm = "0.28"
libc = "0.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
panic = "abort"
