[workspace]
resolver = "2"

# ============================================================================
# WORKSPACE MEMBERS
# ============================================================================
# The main workspace includes all userspace components that build with stable
# Rust. Some crates are excluded due to special requirements:
#
# EXCLUDED CRATES:
#   kernel   - Requires nightly Rust for bare-metal (#![no_std], naked_fn, etc.)
#              Build separately: cd kernel && make build
#
#   spectre  - Requires libclang for PAM bindings generation
#              Install libclang-dev, then: cargo build -p spectre
#
#   aether   - Dependency resolution in progress (not currently buildable)
#
#   umbra    - Optional AI deps require external infernum repo
#   summoner - Optional AI deps require external infernum repo
#              Build separately if infernum repo is available
#
# See CONTRIBUTING.md for detailed build instructions.
# ============================================================================

members = [
    # Core libraries
    "libs/libnyx",
    "libs/libnyx-ipc",
    "libs/libnyx-platform",
    "libs/grimoire-core",
    "libs/grimoire-client",

    # Init and service management
    "init",
    "nyx-serviced",

    # System daemons
    "vesper",       # Audio (PipeWire-compatible)
    "phantom",      # Device management (udev-like)
    "nexus",        # Package management
    "wraith",       # Network configuration (DHCP)
    "cipher",       # Secrets management
    "scribe",       # System logging
    "chronos",      # Time synchronization
    "slumber",      # Power management
    "sentinel",     # System monitoring
    "iris",         # Display management
    "vault",        # Key storage
    # "umbra",      # Shell - excluded, optional AI deps require infernum repo
    # "summoner",   # Session management - excluded, optional AI deps require infernum repo
    "herald",       # Notifications

    # AI-powered agents
    "agents/guardian",   # Security policy
    "agents/archon",     # Process orchestration
    "agents/arachne",    # Network management
    "agents/grimoire",   # Persona management
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Daemoniorum Engineering <engineering@daemoniorum.com>"]
license = "LicenseRef-Proprietary"
repository = "https://github.com/Daemoniorum-LLC/nyx-os"

[workspace.dependencies]
# Core
bitflags = "2.9"
spin = "0.10"
log = "0.4"

# Data structures
hashbrown = "0.15"
heapless = "0.8"

# Architecture support
x86_64 = "0.15"
aarch64-cpu = "9.4"

# Verification
contracts = "0.6"

# Async runtime (userspace)
tokio = { version = "1.41", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
glob = "0.3"
which = "7.0"
hostname = "0.4"
rand = "0.8"
notify = "7.0"
crossterm = "0.28"
libc = "0.2"
uuid = { version = "1.11", features = ["v4", "serde"] }
futures = "0.3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
panic = "abort"
