[package]
name = "cipher"
version.workspace = true
edition = "2024"
authors.workspace = true
license.workspace = true
description = "Nyx secrets and keyring daemon"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
rand = { workspace = true }
zeroize = { version = "1.8", features = ["derive"] }
argon2 = "0.5"
chacha20poly1305 = "0.10"
base64 = "0.22"
directories = "5.0"

[[bin]]
name = "cipherd"
path = "src/main.rs"

[[bin]]
name = "cipher"
path = "src/cli.rs"
