[package]
name = "nyx-cipher"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true
description = "Nyx secrets and keyring daemon"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
clap = { version = "4.5", features = ["derive", "env"] }
rand = { workspace = true }
zeroize = { version = "1.8", features = ["derive"] }
argon2 = "0.5"
chacha20poly1305 = "0.10"
base64 = "0.22"
directories = "5.0"
libc = { workspace = true }

[[bin]]
name = "cipherd"
path = "src/main.rs"

[[bin]]
name = "cipherctl"
path = "src/cli.rs"

[dev-dependencies]
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "crypto_bench"
harness = false
