[package]
name = "herald"
version = "0.1.0"
edition = "2021"
authors = ["Daemoniorum Engineering <engineering@daemoniorum.com>"]
license = "MIT OR Apache-2.0"
description = "Herald - Notification system for DaemonOS"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
dashmap = "6.1"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = "0.4"

# D-Bus (for freedesktop notifications)
zbus = "5.2"

# IPC
libnyx-ipc = { path = "../libs/libnyx-ipc" }

# Platform
libnyx-platform = { path = "../libs/libnyx-platform" }

[features]
default = []
