[package]
name = "nyx-init"
version = "0.1.0"
edition = "2021"
authors = ["Daemoniorum Engineering <engineering@daemoniorum.com>"]
license = "MIT OR Apache-2.0"
description = "DaemonOS init system - where agents become daemons"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# IPC
nix = { version = "0.29", features = ["signal", "process", "fs"] }
tokio-util = { version = "0.7", features = ["codec"] }
libnyx-ipc = { path = "../libs/libnyx-ipc" }

# Utils
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
dashmap = "6.1"
petgraph = "0.7"  # For dependency graph
notify = "7.0"    # File watching for hot reload

[features]
default = []
guardian-integration = []
infernum-integration = []
