[package]
name = "iris"
version = "0.1.0"
edition = "2021"
authors = ["Daemoniorum Engineering <engineering@daemoniorum.com>"]
license = "MIT OR Apache-2.0"
description = "Iris - Display management daemon for DaemonOS"

[[bin]]
name = "irisd"
path = "src/main.rs"

[[bin]]
name = "irisctl"
path = "src/ctl.rs"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System
nix = { version = "0.29", features = ["fs", "ioctl"] }
libc = "0.2"

# Utils
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }

# IPC
libnyx-ipc = { path = "../libs/libnyx-ipc" }

[features]
default = []
drm = []      # DRM/KMS support
wayland = []  # Wayland compositor integration
