[package]
name = "nexus"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true
description = "Nyx package manager with content-addressable storage"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
flate2 = "1.0"
tar = "0.4"
reqwest = { version = "0.12", features = ["json", "stream"] }
semver = { version = "1.0", features = ["serde"] }
toml = "0.8"
tempfile = "3.14"
walkdir = "2.5"
fs2 = "0.4"
futures = "0.3"
indicatif = "0.17"

[[bin]]
name = "nexus"
path = "src/main.rs"

[[bin]]
name = "nexusd"
path = "src/daemon.rs"
