[package]
name = "nyx-assistant"
version = "0.1.0"
edition = "2021"
authors = ["Daemoniorum Engineering <engineering@daemoniorum.com>"]
license = "MIT OR Apache-2.0"
description = "Nyx Assistant - AI-powered command palette and assistant for Nyx OS"

[[bin]]
name = "nyx-assistant"
path = "src/main.rs"

[dependencies]
# Theme and design system
nyx-theme = { path = "../libs/nyx-theme" }

# GUI framework
iced = { version = "0.13", features = ["advanced", "image", "svg", "canvas", "tokio"] }

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Fuzzy matching
fuzzy-matcher = "0.3"

# Desktop entries
freedesktop_entry_parser = "1.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utils
dirs = "5.0"
glob = "0.3"
chrono = "0.4"
once_cell = "1.20"

# IPC for AI integration
libnyx-ipc = { path = "../libs/libnyx-ipc" }
grimoire-client = { path = "../libs/grimoire-client", optional = true }

[features]
default = []
ai = ["grimoire-client"]
