[package]
name = "nyx-settings"
version = "0.1.0"
edition = "2021"
authors = ["Daemoniorum Engineering <engineering@daemoniorum.com>"]
license = "MIT OR Apache-2.0"
description = "Nyx Settings - System configuration application for Nyx OS"

[[bin]]
name = "nyx-settings"
path = "src/main.rs"

[dependencies]
# Theme and design system
nyx-theme = { path = "../libs/nyx-theme" }

# GUI framework
iced = { version = "0.13", features = ["advanced", "image", "svg", "canvas", "tokio"] }

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# System info
sysinfo = "0.32"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utils
dirs = "5.0"
hostname = "0.4"

# IPC
libnyx-ipc = { path = "../libs/libnyx-ipc" }

[features]
default = []
