[package]
name = "phantom"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Phantom - Device manager for DaemonOS (udev replacement)"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
libc = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
nix = { version = "0.29", features = ["fs", "ioctl"] }
inotify = "0.10"

libnyx-platform = { path = "../libs/libnyx-platform" }
libnyx-ipc = { path = "../libs/libnyx-ipc" }
