[package]
name = "scribe"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true
description = "Nyx system logging daemon"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
clap = { version = "4.5", features = ["derive", "env"] }
libc = { workspace = true }
flate2 = "1.0"
memmap2 = "0.9"

[[bin]]
name = "scribed"
path = "src/main.rs"

[[bin]]
name = "scribectl"
path = "src/ctl.rs"
