[package]
name = "sentinel"
version = "0.1.0"
edition = "2021"
authors = ["Daemoniorum Engineering <engineering@daemoniorum.com>"]
license = "MIT OR Apache-2.0"
description = "Sentinel - System monitoring daemon for DaemonOS"

[[bin]]
name = "sentineld"
path = "src/main.rs"

[[bin]]
name = "sentinelctl"
path = "src/ctl.rs"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System info
sysinfo = "0.32"

# Utils
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }

# IPC
libnyx-ipc = { path = "../libs/libnyx-ipc" }

[features]
default = []
prometheus = []  # Prometheus metrics export
