[package]
name = "spectre"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Spectre - Session and login manager for DaemonOS"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
libc = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
nix = { version = "0.29", features = ["user", "process", "signal", "term", "fs"] }
pam = "0.8"
zeroize = { version = "1.8", features = ["derive"] }
uuid = { version = "1.11", features = ["v4"] }

libnyx-platform = { path = "../libs/libnyx-platform" }
libnyx-ipc = { path = "../libs/libnyx-ipc" }
