[package]
name = "summoner"
version = "0.1.0"
edition = "2021"
authors = ["Daemoniorum Engineering <engineering@daemoniorum.com>"]
license = "MIT OR Apache-2.0"
description = "Summoner - Application launcher for DaemonOS"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
dashmap = "6.1"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = "0.4"
dirs = "5.0"
walkdir = "2.5"
fuzzy-matcher = "0.3"
which = "7.0"

# Desktop entries
freedesktop-desktop-entry = "0.7"
freedesktop-icons = "0.2"

# IPC
libnyx-ipc = { path = "../libs/libnyx-ipc" }

# Infernum integration (for smart search)
infernum-core = { path = "../../infernum/crates/infernum-core", optional = true }

[features]
default = []
ai = ["infernum-core"]
