[package]
name = "umbra"
version = "0.1.0"
edition = "2021"
authors = ["Daemoniorum Engineering <engineering@daemoniorum.com>"]
license = "MIT OR Apache-2.0"
description = "Umbra - Conversational shell for DaemonOS"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Terminal
crossterm = "0.28"
ratatui = "0.29"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = "0.4"
regex = "1.11"
dirs = "5.0"

# Shell
shell-words = "1.1"
which = "7.0"
glob = "0.3"
hostname = "0.4"
libc = "0.2"

# IPC
libnyx-ipc = { path = "../libs/libnyx-ipc" }

# Infernum integration (for AI chat)
infernum-core = { path = "../../infernum/crates/infernum-core", optional = true }
grimoire-loader = { path = "../../infernum/crates/grimoire-loader", optional = true }

[features]
default = []
ai = ["infernum-core", "grimoire-loader"]
