[package]
name = "vault"
version = "0.1.0"
edition = "2021"
authors = ["Daemoniorum Engineering <engineering@daemoniorum.com>"]
license = "MIT OR Apache-2.0"
description = "Vault - Secrets management daemon for DaemonOS"

[[bin]]
name = "vaultd"
path = "src/main.rs"

[[bin]]
name = "vaultctl"
path = "src/ctl.rs"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography
ring = "0.17"
base64 = "0.22"
zeroize = { version = "1.8", features = ["derive"] }

# System
nix = { version = "0.29", features = ["fs"] }

# Utils
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

# IPC
libnyx-ipc = { path = "../libs/libnyx-ipc" }

[features]
default = []
tpm = []       # TPM hardware support
keyring = []   # Linux kernel keyring integration
