[package]
name = "wraith"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true
description = "Nyx network manager daemon"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
libc = { workspace = true }
nix = { version = "0.29", features = ["net", "ioctl", "socket"] }
ipnetwork = "0.20"
macaddr = "1.0"
dns-lookup = "2.0"
rand = "0.8"
toml = "0.8"
futures = "0.3"
netlink-sys = "0.8"
netlink-packet-core = "0.7"
netlink-packet-route = "0.19"
rtnetlink = "0.14"

[[bin]]
name = "wraithd"
path = "src/main.rs"

[[bin]]
name = "wraithctl"
path = "src/ctl.rs"
