[package]
name = "arachne"
version = "0.1.0"
edition = "2024"
authors = ["Daemoniorum Engineering <engineering@daemoniorum.com>"]
license = "MIT OR Apache-2.0"
description = "Arachne - Network agent for DaemonOS"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full", "net"] }

# Networking
trust-dns-resolver = "0.23"
trust-dns-server = "0.23"
ipnetwork = "0.20"
pnet = "0.35"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System
nix = { version = "0.29", features = ["net", "ioctl"] }
libc = "0.2"
netlink-packet-route = "0.21"
rtnetlink = "0.14"

# Utils
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
dashmap = "6.1"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = "0.4"

# IPC
libnyx-ipc = { path = "../../libs/libnyx-ipc" }

# Platform
libnyx-platform = { path = "../../libs/libnyx-platform" }

[features]
default = []
wireguard = []  # WireGuard VPN support
