[package]
name = "grimoire-daemon"
version = "0.1.0"
edition = "2024"
authors = ["Daemoniorum Engineering <engineering@daemoniorum.com>"]
license = "MIT OR Apache-2.0"
description = "Grimoire - Unified persona and settings daemon for DaemonOS"

[[bin]]
name = "grimoired"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# File watching
notify = "7.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
dashmap = "6.1"
uuid = { version = "1.11", features = ["v4", "serde"] }
regex = "1.11"
chrono = "0.4"
dirs = "5.0"

# Schema validation
jsonschema = "0.26"

# IPC
libnyx-ipc = { path = "../../libs/libnyx-ipc" }

# Shared grimoire types
grimoire-core = { path = "../../libs/grimoire-core" }

# For random subscription IDs
rand = "0.8"

# Semver for persona versions
semver = { version = "1.0", features = ["serde"] }

[features]
default = []
# Enable Cipher integration for encrypted persona memory
cipher = []
