[package]
name = "guardian"
version = "0.1.0"
edition = "2021"
authors = ["Daemoniorum Engineering <engineering@daemoniorum.com>"]
license = "MIT OR Apache-2.0"
description = "Guardian - AI-powered security agent for DaemonOS"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# IPC
nix = { version = "0.29", features = ["signal", "process", "user"] }

# Utils
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive", "env"] }
dashmap = "6.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

# Pattern learning
regex = "1.11"

# Audit logging
bincode = "1.3"

# Sandbox
bitflags = { version = "2.6", features = ["serde"] }
libc = "0.2"

[features]
default = []
infernum = []  # Enable Infernum integration for AI reasoning
