[package]
name = "grimoire-core"
version = "0.1.0"
edition = "2021"
authors = ["Daemoniorum Engineering <engineering@daemoniorum.com>"]
license = "MIT OR Apache-2.0"
description = "Shared Grimoire types for DaemonOS and Sitra"
keywords = ["persona", "ai", "daemon", "config"]
categories = ["config", "data-structures"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Types
uuid = { version = "1.11", features = ["v4", "serde"] }
semver = { version = "1.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"

# Hashing for persona IDs
blake3 = "1.5"

[features]
default = []
# Enable memory/persistence features
memory = []
# Enable ritual execution
rituals = []
